config/vap/validating_admission_policy_binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: authorino-restrict-spec-fields-binding
spec:
  policyName: authorino-restrict-spec-fields
  validationActions: ["Deny"]
